[gd_scene load_steps=7 format=2]

[ext_resource path="res://camara/Camara.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu/contenedor.gd" type="Script" id=3]
[ext_resource path="res://wildJamRecursos/theme.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = SubResource( 2 )

[sub_resource type="Theme" id=1]
default_font = SubResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 32.0
margin_bottom = 72.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camara" parent="." instance=ExtResource( 1 )]

[node name="Contenedor" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.5
margin_top = -130.5
margin_right = 84.5
margin_bottom = 130.5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jugar" type="Button" parent="Contenedor"]
margin_right = 238.0
margin_bottom = 8.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Detalles" type="Button" parent="Contenedor"]
margin_top = 12.0
margin_right = 238.0
margin_bottom = 20.0
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opciones" type="Button" parent="Contenedor"]
margin_top = 24.0
margin_right = 238.0
margin_bottom = 32.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creditos" type="Button" parent="Contenedor"]
margin_top = 36.0
margin_right = 238.0
margin_bottom = 44.0
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quitar" type="Button" parent="Contenedor"]
margin_top = 48.0
margin_right = 238.0
margin_bottom = 56.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetallesDialog" type="AcceptDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -430.0
margin_top = -264.0
margin_right = 430.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = ""
dialog_text = "video game created for godot wild jam"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contenedor" type="VBoxContainer" parent="DetallesDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -422.0
margin_top = -183.0
margin_right = 422.0
margin_bottom = 183.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThemeText" type="Label" parent="DetallesDialog/Contenedor"]
margin_right = 844.0
margin_bottom = 7.0
text = "Theme
"
align = 1

[node name="Theme" type="TextureRect" parent="DetallesDialog/Contenedor"]
margin_top = 11.0
margin_right = 844.0
margin_bottom = 211.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Contenedor" type="HBoxContainer" parent="DetallesDialog/Contenedor"]
margin_top = 215.0
margin_right = 844.0
margin_bottom = 215.0
[connection signal="button_down" from="Contenedor/Jugar" to="Contenedor" method="_on_Jugar_button_down"]
[connection signal="button_down" from="Contenedor/Detalles" to="Contenedor" method="_on_Detalles_button_down"]
